--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -8,5 +8,11 @@ jobs:
      - name: step1
        run: echo 'hola'
      - name: step2
-       run: echo 'STEP 2'
+       run: echo 'STEP 2'}
 
+ Job2:
+   runs-on: ubuntu-latest
+   steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+  
