--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,14 +5,12 @@ name: .NET
 
 on:
   push:
-    branches: [ "main" ]
-    paths:
-      - './Application/**'
+    branches: 
+    - main
   pull_request:
-    branches: [ "main" ]
-    paths:
-      - './Application/**'
-
+    branches: 
+    - main
+    
 jobs:
   build:
 
