--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,4 +1,4 @@
-# This workflow will build a .NET project
+# This workflow will build a .NET projectmm
 # For more information see: https://docs.github.com/en/actions/aultomating-builds-and-tests/building-and-testing-net.
 
 name: .NET
