--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -6,10 +6,10 @@ name: .NET
 on:
   push:
     branches: 
-    - main
+    - 'Application/**'
   pull_request:
     branches: 
-    - main
+    - 'Application/**'
     
 jobs:
   build:
